# adr-agent

./: .gitignore  README.md  adr-agent-v1.1.md  pyproject.toml
.claude/: adr-agent-hook.py
.devcontainer/: devcontainer.json
src/adr_agent/: cli.py  hooks.py  llm.py  report.py  session.py  settings.py  store.py
tests/: conftest.py  test_cli.py  test_hooks.py  test_models.py  test_reconciler.py  test_report.py  test_session.py  test_settings.py  test_store.py
