[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adr-agent"
dynamic = ["version"]
description = "Per-repository architectural memory for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "python-frontmatter>=1.1",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.scripts]
adr-agent = "adr_agent.cli:main"

[tool.hatch.version]
path = "src/adr_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/adr_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.12",
]
